--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 beautifulsoup4==4.10.0
-lxml==4.7.1
-ujson==5.1.0
-httpx==0.22.0
-python-telegram-bot==13.11
+python_telegram_bot==13.11
+requests==2.27.1
+telegram==0.0.1
